# manitou-mail-ui

./: AUTHORS  COPYING  ChangeLog  ChangeLog.up-to-1.2.0  INSTALL  Makefile.am  NEWS  README  acinclude.m4  configure.in
help/en/: Makefile.am
icons/: Makefile.am  README  manitou-logo.xpm  quit.xpm  reply.xpm
icons/html/: Makefile.am
src/: Makefile.am  about.cpp  about.h  addressbook.cpp  addressbook.h  addresses.cpp  addresses.h  app_config.cpp  app_config.h  attachment.cpp  attachment.h  attachment_listview.cpp  attachment_listview.h  bitvector.cpp  bitvector.h  body_edit.cpp  body_edit.h  body_view.cpp  body_view.h  browser.cpp  browser.h  composer_widgets.cpp  composer_widgets.h  database.h  date.cpp  date.h  db.cpp  db.h  db_error_dialog.cpp  db_error_dialog.h  db_listener.cpp  db_listener.h  dbtypes.h  dragdrop.h  edit_address_widget.cpp  edit_address_widget.h  edit_rules.cpp  edit_rules.h  errors.cpp  errors.h  (+131 more)
src/xface/: Makefile.am  README  arith.cpp  compface.h  compress.cpp  data.h  file.cpp  gen.cpp  vars.h  xface.cpp  xface.h  xface.pro
translations/: Makefile.am  README  manitou_de.ts  manitou_es.ts  manitou_fr.ts  manitou_ru.ts
