iconsdir=${pkgdatadir}/icons
dist_icons_DATA= pattern-about.png manitou-logo.png \
 stock_left-16.png stock_right-16.png stock_delete-16.png stock_edit-16.png \
 stock_print-16.png stock_search-16.png reply_to_all.xpm forward.xpm \
 stock_exec-16.png stock_refresh-16.png stock_bottom-16.png \
 inbox.png stock_people.png 16_edit.png \
 16_configure_mail.png properties-16.png apply-filters-16.png \
 open-in-new-window-16.png close.png undelete_message.png stock_not-spam.png \
 stock_notes.png stock_insert-slide-16.png stock_insert-note-16.png \
 stock_copy-16.png stock_paste-16.png cut.xpm stock_form-letter-dialog-16.png \
 stock_form-open-in-design-mode-16.png stock_undo-16.png stock_redo-16.png \
 stock_outbox.png stock_addressbook.png stock_undelete-16.png \
 stock_font-16.png mail-need-reply.xpm stock_stop-16.png gtk-about.png \
 stock_help-16.png stock_attach-16.png quit.xpm stock_open-16.png \
 reply.xpm stock_data-new-sql-query-16.png exec2-16.png stock_zoom-page-16.png \
 stock_slide-duplicate-16.png clear_edit.png \
 status_new.png status_replied.png status_read.png status_forwarded.png \
 status_attached.png status_trashed.png status_processed.png header.png \
 gtk-cancel.png evolution-memos.png evolution-memos-grey.png spam.png exit.png \
 remove.png accessories-text-editor.png stock_disconnect.png stock_mail-merge.png tag.png \
 stock_new-template.png  stock_save-template.png \
 go-bottom.png go-down.png go-up.png go-top.png \
 folder.png emblem-important.png dialog-ok.png \
 README
