htmlimgdir=${pkgdatadir}/icons/html
dist_htmlimg_DATA= icon-align-left.png icon-foreground-color.png icon-quote.png \
 icon-align-right.png icon-hr.png icon-redo.png \
 icon-anchor.png icon-image.png icon-strikethrough.png \
 icon-background-color.png icon-indent-left.png icon-subscript.png \
 icon-bold.png icon-indent-right.png icon-superscript.png icon-bullet-list.png \
 icon-italic.png icon-underline.png icon-center.png icon-justify.png icon-undo.png \
 icon-copy.png icon-link.png icon-cut.png icon-ordered-list.png \
 icon-eraser.png icon-paste.png stock_view-html-source.png
